fixed header overflow

--- a/src/global.css
+++ b/src/global.css
@@ -485,7 +485,7 @@ header a.button {
 	display: none;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 1000px) {
 	
 	.collapse {
 		display: none !important;
